<resources>

    <string name="app_name">BeMyGuest</string>
    <string name="enter_your_email">Email Address</string>
    <string name="enter_your_password">Password</string>
    <string name="register_user">Create Account</string>
    <string name="sign_up">Sign In</string>
    <string name="forgot_password">Forgot Password? <u>Click here</u></string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Welcome">welcome</string>
    <string name="alreadyUser">Already Registered? <u>Sign in here!</u></string>
    <string name="ratingString">Rating: </string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Local Food</string>
    <string name="slide_1_desc">The easiest way to find food and favourite restaurants with your local guide!</string>
    <string name="slide_2_title">Your Trip Tickets</string>
    <string name="slide_2_desc">Your guide will help you get the best journey tickets!</string>
    <string name="slide_3_title">The Best Priced Guides</string>
    <string name="slide_3_desc">Find the most experienced guides for the best prices</string>
    <string name="slide_4_title">Travel The World</string>
    <string name="slide_4_desc">Enjoy your trip to the maximum, let your guide keep you happy!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="by_registering_you_accept_terms_and_conditions">By registering you accept the <u>Terms</u>   and  <u>Conditions</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_guide">Guides</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profile</string>
    <string name="personal_details">Your Details</string>
    <string name="profile_image">Click image to add a Profile Picture</string>
    <string name="your_name">Name</string>
    <string name="your_surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="please_fill_all_available_fields">Please fill all available fields*</string>
    <string name="userNameProfile">user Name</string>
    <string name="userEmailProfile"><i>user Email</i></string>
    <string name="click_to_type_subject">Click to type Subject</string>
    <string name="textAbout">At Text we want to publish books that make a difference to people’s lives. We believe that reading should be a marvellous experience, that every book you read should somehow change your life if only by a fraction. We love the phrase ‘lost in a book’—that’s where we want our readers to be. You can’t get lost in a newspaper or a magazine or even a movie. But people get lost in books every day—on the tram, on the beach, in bed. Reading is what keeps the imagination supple and challenges preconceptions and prejudices. You read at your own speed, and the world you enter courtesy of the writer is yours and yours only, even if the person next to you on the bus is reading exactly the same book.

We are committed to providing first-class services to the writers who trust us with their books. If we are to fulfil our promises to readers, our job is to do everything in our power to help our writers write the best books they can. We care passionately about the quality of our editorial work. Design and production matter to us because we want our books to be beautiful objects. And since we want our beautiful books to be read on trains and beaches, in beds and planes, or under the desk at school and work, we work up a sweat to promote and market them. And that includes selling rights on behalf of our writers to publishers all around the world. In fact we earn more money for our writers through licensing international editions than we do by turning their books into bestsellers in Australia and New Zealand.

We publish a very broad range of fiction and non-fiction, international and local, books for adults and young adults. We are capable of falling in love with any book, and many of our authors have led us into fascinating territory we would never otherwise have discovered. Lots of our books are award-winners around the world. If you are a writer or an agent and would like to send us your manuscript we would love to consider it. If you are a reader we hope that somewhere on our list you will find the book that makes the world a different place for you.

Happy reading!.</string>
    <string name="title_activity_maps">Map</string>
    <string name="do_you_like_exploring_meeting_new_people_discover_new_cultures_diferent_ways_to_find_friends">Do you like exploring and
        meeting new people?
        Want to discover new cultures
        and different ways to find friends?</string>
    <string name="by_procceding_you_accept_terms_and_conditions">By proceeding you accept the <u>terms</u> and <u>conditions</u></string>
    <string name="chat_now">CHAT NOW</string>
    <string name="term_and_cond">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. We are offering you this app to use for your own personal use without cost, but you should be aware that you cannot send it on to anyone else, and you’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to easyJet. At the bottom of these terms and conditions you will be able to find links to our website where we set out our Privacy Policy, Acceptable Use of the app, and the general Terms and Conditions for passengers and baggage, which will be relevant if you use the app to book flights with easyJet in the future. easyJet is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for. The easyJet app stores and processes personal data that you have provided to us so that you can book flights. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the easyJet app won’t work properly or at all. You should be aware that there are certain things that easyJet will not take responsibility for. Certain functions of the app, such as the ability to download and store your mobile boarding passes offline, the live Flight Tracker and the Mobile Host function will all require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but easyJet cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left. If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app. Along the same lines, easyJet cannot always take responsibility for the way you use the app. If you want to use the mobile boarding pass feature of the app, it’s possible that easyJet staff may need to briefly handle your device when your boarding pass is scanned. While our staff will - of course - take all reasonable care to make sure nothing happens to your device, we don’t accept liability for damage to it, unless it’s caused by any negligence or wilful misconduct by our staff. You also need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to scan your boarding pass as required, easyJet cannot accept responsibility if you are as a result not able to fly. You should also remember that the app’s passport scanner function’s purpose is to make things more convenient for you – it doesn’t replace your travel documents, and you will still need to bring them to the airport in order to fly. Lastly, with respect to easyJet’s responsibility for your use of the app, when you’re using the mobile host function of the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. So, it is not intended to wholly replace the need to stay informed of updates that are made on screens throughout the terminal or via airport loudspeaker announcements. easyJet accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app rather than using all the resources in the airport to keep yourself updated as to the details of your flight. At some point we may wish to update the app. The app is currently available on Android and iOS – the requirements for both systems (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. easyJet does not promise that it will always update the app so that it is relevant to you and/or works with the iOS/Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.</string>


</resources>
