<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mystatusbarColorIntro"
    tools:context="com.example.jonassimonaitis.bemyguest.ProfileActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="678dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/menuOpacity"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/defaulticon"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/profile_image" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:hint="@string/your_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/userSurname"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_favorite_border_black_24dp"
            android:hint="@string/your_surname"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/userphoneNumber"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />



        <EditText
            android:id="@+id/dateView"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawableStart="@drawable/ic_child_friendly_black_24dp"
            android:editable="false"
            android:hint="@string/date_of_birth"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/please_fill_all_available_fields"
            android:textSize="12sp" />


        <Button
            android:id="@+id/userSubmitButton"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_buttons"
            android:text="@string/register"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>
