<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_page"
    tools:context="com.example.jonassimonaitis.bemyguest.RegistrationActivity">


    <LinearLayout

        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="361dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/menuOpacity"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978">


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColorHint="@android:color/background_dark" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColorHint="@android:color/background_dark" />

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColorHint="@android:color/background_dark" />

        <TextView
            android:id="@+id/term_and_condTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/by_registering_you_accept_terms_and_conditions"
            android:textSize="15sp" />


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_buttons2"
            android:fontFamily="monospace"
            android:text="@string/register_user"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/alreadyUser"
            android:textAlignment="center"
            android:textColor="@color/recoverPassword" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="310dp"
        android:layout_height="317dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


</android.support.constraint.ConstraintLayout>
