<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page"
    tools:context="com.example.jonassimonaitis.bemyguest.LoginActivity">

    <!--Add logo in the fure!-->
    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="347dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/menuOpacity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979">


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/background_dark" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/background_dark" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_buttons"
            android:fontFamily="monospace"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_buttons"
            android:fontFamily="monospace"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/recoverPassword"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="310dp"
        android:layout_height="317dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        app:srcCompat="@drawable/logo" />


</android.support.constraint.ConstraintLayout>
